<resources>
    <string name="app_name">GeoPending</string>
    <string name="pass_hint">비밀번호</string>
    <string name="email_hint">이메일</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">로그인</string>
    <string name="login_rerg_btn_text">회원가입</string>
    <string name="register_email_hint">이메일</string>
    <string name="register_password_hint">비밀번호</string>
    <string name="register_password_confirm_hint">비밀번호 확인</string>
    <string name="register_logotext">회원가입</string>
    <string name="login_logotext">Geo Pending</string>
    <string name="register_button_register">회원가입</string>
    <string name="register_button_login">이미 회원이신가요?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings_button">프로필</string>
    <string name="action_logout_button">로그아웃</string>
    <string name="setup_name_hint">이름</string>
    <string name="setup_button_save">저장하기</string>
    <string name="setup_group_hint">그룹</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_friend">친구</string>
    <string name="bottom_navigation_maps">지도</string>
    <string name="bottom_navigation_setting">설정</string>
    <string name="account_trakinginfo_text">상대방이 요청한 트래킹 정보</string>
</resources>
